# MIPSPipelining

./: .clang-format  CMakeLists.txt  LICENSE  README.md  manual-ca.md  manual-en.md
examples/: basic.asm  branch.asm  memory.asm
include/: instruction.h  interpreter.h  parseraux.h  simulator.h  translator.h
include/interpreter/: executer.h  parser.h
src/: main.cpp  parser.yy  scanner.l  simulator.cpp  translator.cpp
src/interpreter/: executer.cpp  parser.cpp  parser.yy  scanner.l
